# ADME-prediction

./: .gitignore  README.md  benchmarks.ipynb  main.md  pyproject.toml  requirements.txt  results.txt  setup.sh
src/: __init__.py  logging.py
