[tool.poetry]
name = "ADME-prediction"
version = "0.1.0"
description = "Prediction of (ADME) properties of small molecules."
authors = ["Oskar Fernlund <oskar.fernlund@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
jupytext = "^1.14.4"
pyTDC = "^0.3.9"
torch = "^1.13.1"
torch-geometric = "^2.2.0"
scikit-learn = "^1.2.1"
transformers = "^4.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"